--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -18,7 +18,7 @@ trainer:
   strategy: ddp
   precision: 32
 
-dataset_name: task_D_D
+dataset_name: calvin_lang
 dataset:
   data_dir: ${paths.datasets}/${dataset_name}
   cam: static
