--- a/config/aff_detection/clip.yaml
+++ b/config/aff_detection/clip.yaml
@@ -1,4 +1,4 @@
-__target__: thesis.models.clip_detector.CLIPPointDetector
+__target__: thesis.affordance.clip_detector.CLIPPointDetector
 resize: 100
 clip_model: "RN50"  # ["RN50", "RN101", "RN50x4", "RN50x16"]
 saliency_layer: "layer4"  # ["layer4", "layer3", "layer2", "layer1"]
