transforms and preprocessing

--- a/config/aff_detection/clip.yaml
+++ b/config/aff_detection/clip.yaml
@@ -1,5 +1,5 @@
-__target__: thesis.affordance.clip_detector.CLIPPointDetector
-resize: 100
+_target_: thesis.affordance.clip_detector.CLIPPointDetector
+resize: 224
 clip_model: "RN50"  # ["RN50", "RN101", "RN50x4", "RN50x16"]
 saliency_layer: "layer4"  # ["layer4", "layer3", "layer2", "layer1"]
 blur: False
