--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -1,7 +1,7 @@
 defaults:
   - aff_detection: cliport_lang
   - paths: general_paths
-  - transforms@dataset.transforms_cfg: rgb
+  - transforms@dataset.transforms_cfg: rgb_lang
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
