--- a/config/cfg_calvin.yaml
+++ b/config/cfg_calvin.yaml
@@ -3,7 +3,7 @@ defaults:
   - scene: calvin_scene_D
   - env: env
   - aff_detection: cliport_lang
-  - cameras: static_and_gripper
+  - cameras: static_and_gripper_calvin
   - paths: general_paths
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
@@ -12,9 +12,9 @@ data_path: ${paths.vr_data}
 model_name: full
 
 aff_checkpoint:
-  path: .hydra_outputs/affordance_model/2022-01-16/14-47-31_aff_rl
-  model_name: epoch=49-step=68849.ckpt
-  img_resize: 200
+  path: ./hydra_outputs/affordance_model/2022-01-18/00-25-21_aff_rl
+  model_name: last.ckpt
+  img_resize: 224
 
 agent:
   _target_: thesis.agents.base_agent.BaseAgent
