--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -1,7 +1,6 @@
 defaults:
   - aff_detection: cliport_lang
   - paths: general_paths
-  - transforms@dataset.transforms_cfg: rgb_lang
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
@@ -26,6 +25,7 @@ dataset:
   data_dir: ${paths.datasets}/${dataset_name}
   cam: static
   n_train_ep: -1  # Train using all episodes
+  transforms: ${aff_detection.transforms}
   img_resize:
     static: 224  # clip img size
     gripper: 96
@@ -48,12 +48,12 @@ wandb:
       save_top_k: 2
       mode: min
       verbose: True
-      save_last: True
     val_err:
       monitor: 'Validation/total_attn_dist_err'
       save_top_k: 2
       mode: min
       verbose: True
+      save_last: True
 #-- Hydra config --#
 hydra_outputs: ./hydra_outputs/affordance_model/
 hydra:
