rand shift auf considers center

--- a/config/transforms/transporter.yaml
+++ b/config/transforms/transporter.yaml
@@ -4,7 +4,7 @@ training:
     interpolation: 'bicubic'
   - _target_: torchvision.transforms.CenterCrop
     size: ${img_size}
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
+  - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - torchvision.transforms.Normalize:
     mean: [0.18877631, 0.18877631, 0.18877631]
     std: [0.07276466, 0.07276466, 0.07276466]
@@ -15,7 +15,7 @@ validation:
     interpolation: 'bicubic'
   - _target_: torchvision.transforms.CenterCrop
     size: ${img_size}
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
+  - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - torchvision.transforms.Normalize:
     mean: [0.18877631, 0.18877631, 0.18877631]
     std: [0.07276466, 0.07276466, 0.07276466]
