--- a/config/transforms/gray.yaml
+++ b/config/transforms/gray.yaml
@@ -1,18 +1,18 @@
 training:
   - _target_: torchvision.transforms.Resize
     size: ${img_resize}
-  - _target_: affordance.dataloader.transforms.ColorTransform
+  - _target_: thesis.datasets.transforms.ColorTransform
     contrast: 0.05
     brightness: 0.05
     hue: 0.02
     prob: 1
   - _target_: torchvision.transforms.Grayscale
     num_output_channels: 1
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
+  - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
     std: [0.5,]
-  - _target_: affordance.dataloader.transforms.AddGaussianNoise
+  - _target_: thesis.datasets.transforms.AddGaussianNoise
     mean: [0.0]
     std: [0.01]
     clip: [-1, 1]
@@ -22,7 +22,7 @@ validation:
     size: ${img_resize}
   - _target_: torchvision.transforms.Grayscale
     num_output_channels: 1
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor
+  - _target_: thesis.datasets.transforms.ScaleImageTensor
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
     std: [0.5,]
