--- a/config/transforms/rgb.yaml
+++ b/config/transforms/rgb.yaml
@@ -1,16 +1,16 @@
 training:
   - _target_: torchvision.transforms.Resize
     size: ${img_resize}
-  - _target_: affordance.dataloader.transforms.ColorTransform
+  - _target_: thesis.datasets.transforms.ColorTransform
     contrast: 0.05
     brightness: 0.05
     hue: 0.02
     prob: 1
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
+  - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
     std: [0.5,]
-  - _target_: affordance.dataloader.transforms.AddGaussianNoise
+  - _target_: thesis.datasets.transforms.AddGaussianNoise
     mean: [0.0]
     std: [0.01]
     clip: [-1, 1]
@@ -18,7 +18,7 @@ training:
 validation:
   - _target_: torchvision.transforms.Resize
     size: ${img_resize}
-  - _target_: affordance.dataloader.transforms.ScaleImageTensor
+  - _target_: thesis.datasets.transforms.ScaleImageTensor
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
     std: [0.5,]
