--- a/config/test_affordance.yaml
+++ b/config/test_affordance.yaml
@@ -8,9 +8,9 @@ defaults:
 # folders
 checkpoint:
   path: ./hydra_outputs/affordance_model/2022-01-18/00-25-21_aff_rl
-  model_name: x.ckpt # cliport_bs32_epoch=00.ckpt
+  model_name: cliport_bs32_epoch=00.ckpt
 
-dataset_name: calvin_lang_contact
+dataset_name: calvin_lang_contactInfo
 dataset:
   data_dir: ${paths.datasets}/${dataset_name}
   cam: static
