--- a/config/test_affordance.yaml
+++ b/config/test_affordance.yaml
@@ -3,22 +3,23 @@ defaults:
   - paths: general_paths
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
+
 #
 save_viz: True
 
-
 # folders
 checkpoint:
-  # path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
-  # model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt # cliport_bs32_epoch=00.ckpt
-  path: ./hydra_outputs/affordance_model/2022-01-18/00-25-21_aff_rl
-  model_name: cliport_bs32_epoch=00.ckpt # last.ckpt
+  path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
+  model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt # cliport_bs32_epoch=00.ckpt
+  # path: ./hydra_outputs/affordance_model/2022-01-26/23-47-03_aff_rl
+  # model_name: cliport_bs32_randShift_epoch=10_val_err.ckpt # last.ckpt
 
-dataset_name: calvin_lang_contactInfo
+dataset_name: calvin_lang_contactEndPt/validation
 dataset:
   data_dir: ${paths.datasets}/${dataset_name}
   cam: static
   n_train_ep: -1  # Train using all episodes
+  transforms: ${aff_detection.transforms}
   img_resize:
     static: 224  # clip img size
     gripper: 96
