--- a/config/transforms/gray.yaml
+++ b/config/transforms/gray.yaml
@@ -1,6 +1,6 @@
 training:
   - _target_: torchvision.transforms.Resize
-    size: ${img_resize}
+    size: ${aff_detection.img_size}
   - _target_: thesis.datasets.transforms.ColorTransform
     contrast: 0.05
     brightness: 0.05
@@ -19,7 +19,7 @@ training:
     
 validation:
   - _target_: torchvision.transforms.Resize
-    size: ${img_resize}
+    size: ${aff_detection.img_size}
   - _target_: torchvision.transforms.Grayscale
     num_output_channels: 1
   - _target_: thesis.datasets.transforms.ScaleImageTensor
