--- a/config/transforms/rgb.yaml
+++ b/config/transforms/rgb.yaml
@@ -1,6 +1,6 @@
 training:
   - _target_: torchvision.transforms.Resize
-    size: ${img_resize}
+    size: ${aff_detection.img_size}
   - _target_: thesis.datasets.transforms.ColorTransform
     contrast: 0.05
     brightness: 0.05
@@ -17,7 +17,7 @@ training:
     
 validation:
   - _target_: torchvision.transforms.Resize
-    size: ${img_resize}
+    size: ${aff_detection.img_size}
   - _target_: thesis.datasets.transforms.ScaleImageTensor
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
