--- a/config/transforms/transporter.yaml
+++ b/config/transforms/transporter.yaml
@@ -1,9 +1,9 @@
 training:
   - _target_: torchvision.transforms.Resize
-    size: ${img_size}
+    size: ${aff_detection.img_size}
     interpolation: 'bicubic'
   - _target_: torchvision.transforms.CenterCrop
-    size: ${img_size}
+    size: ${aff_detection.img_size}
   - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - torchvision.transforms.Normalize:
     mean: [0.18877631, 0.18877631, 0.18877631]
@@ -11,10 +11,10 @@ training:
 
 validation:
   - _target_: torchvision.transforms.Resize
-    size: ${img_size}
+    size: ${aff_detection.img_size}
     interpolation: 'bicubic'
   - _target_: torchvision.transforms.CenterCrop
-    size: ${img_size}
+    size: ${aff_detection.img_size}
   - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - torchvision.transforms.Normalize:
     mean: [0.18877631, 0.18877631, 0.18877631]
