--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - aff_detection: lang_fusion
+  - aff_detection: cliport_lang
   - paths: general_paths
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
@@ -12,7 +12,7 @@ load_from_last_ckpt: True
 checkpoint:
   path: ./ # ${hydra_outputs}/2022-01-16/14-42-24_aff_rl
   model_name: last.ckpt # epoch=49-step=34449.ckpt
-run_name: 'lang_fusion'
+run_name: 'cliport_lang'
 
 trainer:
   # script configs
