--- a/config/test_affordance.yaml
+++ b/config/test_affordance.yaml
@@ -9,12 +9,12 @@ save_viz: True
 
 # folders
 checkpoint:
-  # path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
-  # model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt # cliport_bs32_epoch=00.ckpt
-  path: ./hydra_outputs/affordance_model/2022-01-27/17-06-54_aff_rl
-  model_name: vapo_endpt_randShift_epoch=01_val_loss #last.ckpt
+  path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
+  model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt # cliport_bs32_epoch=00.ckpt
+  # path: ./hydra_outputs/affordance_model/2022-01-27/17-06-54_aff_rl
+  # model_name: vapo_endpt_randShift_epoch=02_val_err.ckpt #last.ckpt
 
-dataset_name: calvin_lang_contactEndPt/validation
+dataset_name: calvin_lang_contactEndPt
 dataset:
   data_dir: ${paths.datasets}/${dataset_name}
   cam: static
