--- a/config/cfg_calvin.yaml
+++ b/config/cfg_calvin.yaml
@@ -12,8 +12,10 @@ data_path: ${paths.vr_data}
 model_name: full
 
 aff_checkpoint:
-  path: ./hydra_outputs/affordance_model/2022-01-24/20-19-09_aff_rl
-  model_name: cliport_bs32_randShift_epoch=00_val_err.ckpt
+  path: ./hydra_outputs/affordance_model/2022-01-27/17-06-54_aff_rl
+  model_name: vapo_endpt_randShift_epoch=00_val_loss.ckpt #last.ckpt
+  # path: ./hydra_outputs/affordance_model/2022-01-24/20-19-09_aff_rl
+  # model_name: cliport_bs32_randShift_epoch=00_val_err.ckpt
   # path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
   # model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt
   img_resize: 224
