--- a/config/test_affordance.yaml
+++ b/config/test_affordance.yaml
@@ -11,8 +11,15 @@ save_viz: True
 checkpoint:
   # path: ./hydra_outputs/affordance_model/2022-01-18/16-20-15_aff_rl
   # model_name: cliport_bs32_notrasforms_epoch=00_val_err.ckpt # cliport_bs32_epoch=00.ckpt
-  path: ./hydra_outputs/affordance_model/2022-01-27/17-06-54_aff_rl
-  model_name: vapo_endpt_randShift_epoch=00_val_loss.ckpt #last.ckpt
+  # VAPO
+  # path: ./hydra_outputs/affordance_model/2022-01-27/17-06-54_aff_rl
+  # model_name: vapo_endpt_randShift_epoch=00_val_loss.ckpt #last.ckpt
+
+  # CLIPORT
+  path: ./hydra_outputs/affordance_model/2022-01-27/17-16-26_aff_rl
+  model_name: cliport_endpt_randShift_epoch=00_val_err.ckpt #last.ckpt
+  # path: ./hydra_outputs/affordance_model/2022-01-27/17-16-20_aff_rl
+  # model_name: cliport_endpt_epoch=08_val_err.ckpt #last.ckpt
 
 dataset_name: calvin_lang_contactEndPt
 dataset:
