--- a/config/env/env.yaml
+++ b/config/env/env.yaml
@@ -1,4 +1,4 @@
-_target_: vr_env.envs.play_table_env.PlayTableSimEnv
+_target_: calvin_env.envs.play_table_env.PlayTableSimEnv
 _recursive_: false
 cameras: ${cameras}
 seed: 0
