--- a/config/paths/general_paths.yaml
+++ b/config/paths/general_paths.yaml
@@ -1,6 +1,5 @@
 parent_folder: ../
-vapo_path: ${paths.parent_folder}/vapo/
-vr_data: ${paths.parent_folder}/VREnv/data/
+vr_data: ${paths.parent_folder}/calvin_env/data/
 
 # Trained affordance models
 trained_models: ${paths.vapo_path}/trained_models/
