--- a/config/scene/calvin_scene_D_eval.yaml
+++ b/config/scene/calvin_scene_D_eval.yaml
@@ -1,4 +1,4 @@
-_target_: vr_env.scene.play_table_scene.PlayTableScene
+_target_: calvin_env.scene.play_table_scene.PlayTableScene
 _recursive_: false
 data_path: ${data_path}
 global_scaling: 0.8
