--- a/config/env/env.yaml
+++ b/config/env/env.yaml
@@ -4,7 +4,7 @@ cameras: ${cameras}
 seed: 0
 bullet_time_step: 240.0
 use_vr: False
-show_gui: True
+show_gui: False
 robot_cfg: ${robot}
 scene_cfg: ${scene}
 use_scene_info: false
