--- a/config/agent/baseline.yaml
+++ b/config/agent/baseline.yaml
@@ -2,6 +2,6 @@ _target_: thesis.agents.lmp_agent.PlayLMPAgent
 _recursive_: False
 dataset_path: ${paths.datasets}/unprocessed/task_D_D
 checkpoint: 
-  train_folder: ./trained_agents/lfp
-  model_name: epoch=30.ckpt
+  train_folder: ./trained_agents/D_D_static_rgb_baseline
+  model_name: mcil_baseline.ckpt
 offset: ${gripper_offset}
