--- a/config/lfp/rollout/aff_lfp.yaml
+++ b/config/lfp/rollout/aff_lfp.yaml
@@ -3,7 +3,7 @@ defaults:
 _target_: lfp.rollout.rollout.Rollout
 _recursive_: false
 env_cfg:
-  _target_: thesis.env_wrappers.play_lmp_wrapper.PlayLMPWrapper
+  _target_: thesis.env_wrappers.play_aff_lmp_wrapper.PlayLMPWrapper
 skip_epochs: 1
 rollout_freq: 5
 video: true
