remove word_attn fusion

--- a/config/aff_detection/pixel_data.yaml
+++ b/config/aff_detection/pixel_data.yaml
@@ -5,7 +5,7 @@ wandb_saver:
     mode: min
     verbose: True
   val_err:
-    monitor: 'Validation/dist_err'
+    monitor: 'Validation/total_dist_err'
     save_top_k: 2
     mode: min
     verbose: True
