--- a/config/train_depth.yaml
+++ b/config/train_depth.yaml
@@ -1,13 +1,13 @@
 defaults:
-  - aff_detection: rn50_clip_pixel
   - paths: general_paths
+  - transforms: clip_color
   - override hydra/hydra_logging: colorlog
   - override hydra/job_logging: colorlog
 
 save_viz: True
 
 # folders
-run_name: ${aff_detection.name}
+run_name: depth
 load_from_last_ckpt: True
 checkpoint:
   path: ./ # ${hydra_outputs}/2022-01-16/14-42-24_aff_rl
@@ -16,29 +16,34 @@ checkpoint:
 trainer:
   # script configs
   gpus: -1
-  max_epochs: 30
+  max_epochs: 200
   check_val_every_n_epoch: 1
   num_sanity_val_steps: 1
   strategy: ddp
   precision: 32
 
 dataset_name: calvin_lang_MoCEndPt
-aff_detection:
-  model:
-    depth_dist: logistic  # logistic / gaussian
-    cfg:
-      loss_weights:
-        aff: 1.0
-        depth: 1.0
+model:
+  lr: 1e-04
+  depth_dist: logistic  # logistic / gaussian
+  lang_fusion_type: mult
 
-  dataset:
-    _recursive_: False
-    data_dir: ${paths.datasets}/${dataset_name}
-    cam: static
-    img_resize:
-      static: 224  # clip img size
-      gripper: 96
-      all: 100
+aff_detection:
+  img_size: 224
+
+dataset:
+  _recursive_: False
+  _target_: thesis.datasets.pixel_label.PixeLabelDataLang
+  transforms: ${transforms}
+  radius:
+    static: 16
+    gripper: 10
+  data_dir: ${paths.datasets}/${dataset_name}
+  cam: static
+  img_resize:
+    static: 224  # clip img size
+    gripper: 96
+    all: 100
 
 dataloader:
   num_workers: 4
@@ -51,7 +56,18 @@ wandb:
     entity: affordance
     project: affordance_model
     offline: False
-  saver: ${aff_detection.wandb_saver}
+  saver:
+    val_loss:
+      monitor: 'Validation/total_loss'
+      save_top_k: 2
+      mode: min
+      verbose: True
+    val_err:
+      monitor: 'Validation/depth_err'
+      save_top_k: 2
+      mode: min
+      verbose: True
+      save_last: True
 
 #-- Hydra config --#
 hydra_outputs: ./hydra_outputs/affordance_model/
