--- a/config/aff_detection/rn18_bert_mask.yaml
+++ b/config/aff_detection/rn18_bert_mask.yaml
@@ -1,7 +1,7 @@
 # Unet Resnet 18 with respective decoder channels
 # BERT as sentence encoder
 # Affordance binary mask prediction
-name: vapo_mask_bert
+name: rn18_bert_mask
 
 model:
   _target_: thesis.affordance.mask_aff_lang_detector.MaskAffLangDetector
