--- a/config/aff_detection/rn18_bert_pixel.yaml
+++ b/config/aff_detection/rn18_bert_pixel.yaml
@@ -1,7 +1,7 @@
 # Unet Resnet 18 with respective decoder channels
 # BERT as sentence encoder
 # Single pixel prediction
-name: vapo_pixel_bert
+name: rn18_bert_pixel
 
 model:
   _target_: thesis.affordance.pixel_aff_lang_detector.PixelAffLangDetector
