--- a/config/aff_detection/rn18_clip_mask.yaml
+++ b/config/aff_detection/rn18_clip_mask.yaml
@@ -1,7 +1,7 @@
 # Unet Resnet 18 with respective decoder channels
 # CLIP as sentence encoder
 # Affordance binary mask prediction
-name: vapo_mask_clip
+name: rn18_clip_mask
 
 model:
   _target_: thesis.affordance.mask_aff_lang_detector.MaskAffLangDetector
