--- a/config/cfg_calvin.yaml
+++ b/config/cfg_calvin.yaml
@@ -1,6 +1,6 @@
 defaults:
   - robot: panda_longer_finger
-  - scene: calvin_scene_A
+  - scene: calvin_scene_D
   - env: env
   - aff_detection: rn50_clip_pixel
   - cameras: static_and_gripper_calvin
@@ -18,15 +18,18 @@ policy_checkpoint:
   train_folder: ./trained_agents/lfp
   model_name: epoch=30.ckpt
 
+agent:
+  viz_obs: True
+
 depth_pred:
   checkpoint:
-    train_folder: ./hydra_outputs/depth_pred/23-58-14_aff_rl
+    train_folder: ./hydra_outputs/depth_pred/2022-04-30/18-11-11_aff_rl
     model_name: val_err.ckpt
     img_resize: 224
 
 aff_detection:
   checkpoint:
-    train_folder: ./hydra_outputs/affordance_model/2022-04-29/14-05-55_aff_rl
+    train_folder: ./hydra_outputs/affordance_model/2022-04-29/14-02-55_aff_rl
     # train_folder: ./hydra_outputs/affordance_model/2022-03-09/01-38-55_aff_rl
     model_name: val_err.ckpt
     img_resize: 224
