--- a/config/train_depth.yaml
+++ b/config/train_depth.yaml
@@ -27,6 +27,7 @@ model:
   lr: 1e-04
   depth_dist: logistic  # logistic / gaussian
   lang_fusion_type: mult
+  normalize_depth: False
 
 aff_detection:
   img_size: 224
