--- a/config/transforms/clip_real_world.yaml
+++ b/config/transforms/clip_real_world.yaml
@@ -1,13 +1,13 @@
 training:
   - _target_: torchvision.transforms.Resize
     size: ${aff_detection.img_size}
-  - _target_: thesis.datasets.transforms.RandomShiftsAug
-    pad: 10
+  # - _target_: thesis.datasets.transforms.RandomShiftsAug
+  #   pad: 3
   - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
   - _target_: thesis.datasets.transforms.ColorTransform
     contrast: 0.05
-    brightness: 0.05
-    hue: 0.01
+    brightness: 0.1
+    hue: 0.02
     prob: 1
   - _target_: torchvision.transforms.Normalize
     mean: [0.48145466, 0.4578275, 0.40821073]
