--- a/config/aff_detection/rn50_clip_pixel.yaml
+++ b/config/aff_detection/rn50_clip_pixel.yaml
@@ -8,8 +8,10 @@ model_cfg:
   attn_stream_fusion_type: 'add'
   lang_fusion_type: 'mult'
   streams: ${aff_detection.streams}
-  freeze_backbone: True
-
+  freeze_encoder: 
+    lang: True
+    aff: True
+    depth: True
 defaults:
   - pixel_data
   - streams: clip_lingunet
