--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -52,7 +52,7 @@ wandb:
     entity: jessibd
     project: aff_lang
     offline: False
-    group: ${aff_detection.dataset.data_percent}p
+    group: ${aff_detection.dataset.data_percent}p_shared_enc
   saver: ${aff_detection.wandb_saver}
 
 #-- Hydra config --#
