--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -50,7 +50,7 @@ wandb:
   logger:
     name: ${run_name}
     entity: jessibd
-    project: aff_lang
+    project: aff_lang_new
     offline: False
     group: ${aff_detection.dataset.data_percent}p_shared_enc
   saver: ${aff_detection.wandb_saver}
