save inference viz, standard transforms, add lang encoders

--- a/config/aff_detection/rn18_clip_pixel.yaml
+++ b/config/aff_detection/rn18_clip_pixel.yaml
@@ -16,7 +16,7 @@ model_cfg:
   streams: ${aff_detection.streams}
   batchnorm: False 
   unet_cfg: # [256, 128, 64, 32, 16]
-    decoder_channels: [256, 128, 64, 32, 16]
+    decoder_channels: [256, 128, 64, 32]
 
 defaults:
   - pixel_data
