--- a/config/train_affordance.yaml
+++ b/config/train_affordance.yaml
@@ -16,7 +16,7 @@ checkpoint:
 trainer:
   # script configs
   gpus: -1
-  max_epochs: 20
+  max_epochs: 30
   check_val_every_n_epoch: 1
   num_sanity_val_steps: 1
   strategy: ddp
@@ -27,18 +27,18 @@ aff_detection:
   depth_dist: gaussian # logistic / gaussian
   normalize_depth: True
   optimizer:
-    lr: 1e-5
+    lr: 1e-4
   loss_weights:
-    aff: 0.001
-    depth: 1.0
+    aff: 0.0001
+    depth: 10.0
   dataset:
     _recursive_: False
     data_dir: ${paths.datasets}/${dataset_name}
     cam: static
     data_percent: 1.0
     img_resize:
-      static: 224  # clip img size
-      gripper: 96
+      static: 224
+      gripper: 84
       all: 100
 
 dataloader:
@@ -50,7 +50,7 @@ wandb:
   logger:
     name: ${run_name}
     entity: jessibd
-    project: aff_lang_new
+    project: aff_lang_thesis
     offline: False
     group: ${aff_detection.dataset.cam}_${aff_detection.dataset.data_percent}p
   saver: ${aff_detection.wandb_saver}
