--- a/config/transforms/rgb_randShift_color.yaml
+++ b/config/transforms/rgb_randShift_color.yaml
@@ -1,14 +1,21 @@
 training:
   - _target_: torchvision.transforms.Resize
     size: ${aff_detection.img_size}
+  - _target_: thesis.datasets.transforms.RandomShiftsAug
+    pad: 5
   - _target_: thesis.datasets.transforms.ScaleImageTensor  # Scale 0-255 to 0-1
+  - _target_: thesis.datasets.transforms.ColorTransform
+    contrast: 0.05
+    brightness: 0.05
+    hue: 0.02
+    prob: 1
   - _target_: torchvision.transforms.Normalize
     mean: [0.5,]
     std: [0.5,]
-  - _target_: thesis.datasets.transforms.AddGaussianNoise
-    mean: [0.0]
-    std: [0.005]
-    clip: [-1, 1]
+  # - _target_: thesis.datasets.transforms.AddGaussianNoise
+  #   mean: [0.0]
+  #   std: [0.005]
+  #   clip: [-1, 1]
     
 validation:
   - _target_: torchvision.transforms.Resize
