--- a/config/cfg_calvin.yaml
+++ b/config/cfg_calvin.yaml
@@ -2,7 +2,7 @@ defaults:
   - robot: panda_longer_finger
   - scene: calvin_scene_D
   - env: env
-  - cameras: static_and_gripper_calvin
+  - cameras: high_res
   - paths: general_paths
   - agent: play_lmp
   - override hydra/hydra_logging: colorlog
@@ -12,7 +12,7 @@ data_path: ${paths.vr_data}
 model_name: full
 
 max_timesteps: 364
-gripper_offset: [0.0, -0.025, 0.055]
+gripper_offset: [0.0, -0.025, 0.05]
 policy_checkpoint: 
   train_folder: ./trained_agents/lfp
   model_name: epoch=30.ckpt
