--- a/config/cfg_real_world.yaml
+++ b/config/cfg_real_world.yaml
@@ -20,14 +20,14 @@ agent:
   save_viz: False
   viz_obs: True
   offset: [-0.05, -0.05, 0.13]  # Relative to end effector
-  model_free: 
-    train_folder: ./trained_agents/lfp
-    checkpoint: 30
   aff_cfg:
     train_folder: ~/logs/thesis/aff_ablation/2022-06-15/18-23-49_aff_ablation
       # train_folder: ./hydra_outputs/affordance_model/2022-03-09/01-38-55_aff_rl
     model_name: last.ckpt
-  
+
+model_free:
+  train_folder: /home/meeso/real_aff_lang_lfp/old_models_missing_annotations/lang_lfp_v1
+  checkpoint: 17
 seed: 42
 env:
   freq: 15
